--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
 <body>
 
 <ul>
-	<li><a href="text.html">Text</a></li>
+	<li><a href="index.html">Text</a></li>
   <li><a href="image.html">Image</a></li>
   <li><a href="video.html">Video</a></li>
   <li><a href="table.html">Table</a></li>
