--- a/table.html
+++ b/table.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -9,7 +10,8 @@
 	<li><a href="index.html">Text</a></li>
   <li><a href="image.html">Image</a></li>
   <li><a href="video.html">Video</a></li>
-  <li><a href="table.html">Table</a></li>
+  <li><a href="table.html" class="active">Table</a></li>
+  <li><a href="email.html">Email</a></li>
 </ul><br/>
 <div class="pageinfo">
   <h1>Social Medias Table</h1>
@@ -57,5 +59,7 @@
     </tr>
   </table>
 </div>
+<button id="scroll" onClick="goToTop()">Top</button>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
