actually finished pr2, fixed scripts

--- a/email.html
+++ b/email.html
@@ -18,7 +18,7 @@
   <label>Enter your email address: </label><br/>
   <input id="email" type="email">
   <p id="result"></p>
-  <button onClick="validateEmail()">Submit</button>
+  <button onClick="checkEmail()">Submit</button>
 </div>
 <button id="scroll" onClick="goToTop()">Top</button>
 <script type="text/javascript" src="script.js"></script>
