--- a/image.html
+++ b/image.html
@@ -16,34 +16,34 @@
 <div class="pageinfo">
   <div class="grid">
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i1.jpg">
+          <img onClick="showImage(this)" src="i1.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i2.jpg">
+          <img onClick="showImage(this)" src="i2.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i3.jpg">
+          <img onClick="showImage(this)" src="i3.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i4.jpg">
+          <img onClick="showImage(this)" src="i4.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i5.jpg">
+          <img onClick="showImage(this)" src="i5.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i6.jpg">
+          <img onClick="showImage(this)" src="i6.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i7.jpg">
+          <img onClick="showImage(this)" src="i7.jpg">
       </div>
       <div class="in_grid">
-          <img onClick="showImgOverlay(this)" src="i8.jpg">
+          <img onClick="showImage(this)" src="i8.jpg">
       </div>
   </div>
 </div>
 <button id="scroll" onClick="goToTop()">Top</button>
-<div id="overlay" class="overlay" onClick="hideImgOverlay()">
-<img id="overlay-item" class="overlay-item"></div>
+<div id="overlay" class="overlay" onClick="hideImage()">
+<img id="in_overlay" class="in_overlay"></div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
