--- a/video.html
+++ b/video.html
@@ -16,34 +16,34 @@
 <div class="pageinfo">
   <div class="grid">
     <div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v1.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v1.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v2.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v2.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v3.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v3.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v4.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v4.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v5.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v5.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v6.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v6.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v7.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v7.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
 	<div class="in_grid">
-	    <video onClick="showVideoOverlay(this)" src="v8.mp4" type="video/mp4" autoplay loop muted></video>
+	    <video onClick="showVideo(this)" src="v8.mp4" type="video/mp4" autoplay loop muted></video>
 	</div>
   </div>
 </div>
 <button id="scroll" onClick="goToTop()">Top</button>
-<div id="overlay" class="overlay" onClick="hideVideoOverlay()">
-<video id="overlay-item" class="overlay-item" controls></video></div>
+<div id="overlay" class="overlay" onClick="hideVideo()">
+<video id="in_overlay" class="in_overlay" controls></video></div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
